Ensured content always visible on mobile
Long inline code without space, like Theme.MaterialComponents.Light.NoActionBar.Bridge on floating action button, would push the content to the left and it would be hidden by the nav menu

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -249,6 +249,9 @@ img.arrow {
     width: 100%;
     margin-top: 0;
   }
+  code {
+    word-break: break-word;
+  }
 }
 
 
